# Render

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  appearance_unified_refactor_plan.md  deep-research-report.md  rep2.md
.claude/: settings.local.json
bench/: CMakeLists.txt  README.md  bench_main.cpp
bench/baselines/: ecs_appearance_coordinator_incremental_post_2026-04-28_160659.json  ecs_appearance_coordinator_post_cross_frame_2026-04-28_162152.json  ecs_appearance_coordinator_post_refactor_2026-04-28_161549.json  ecs_appearance_dual_renderer_phase2_post_2026-04-28_1410.json  ecs_appearance_link_incremental_post_2026-04-28_161131.json  ecs_appearance_phase2_baseline_2026-04-28_140156.json  ecs_appearance_phase2_post_2026-04-28_140903.json  ecs_appearance_phase3_baseline_2026-04-28_141458.json  ecs_appearance_phase3_opt2_post_2026-04-28_144659.json  ecs_appearance_phase3_post_2026-04-28_142556.json  ecs_core_cpu_baseline_2026-04-27_232136.json  ecs_core_cpu_baseline_2026-04-27_232136_snapshot.md  ecs_core_cpu_baseline_2026-04-27_233020.json  ecs_core_cpu_post_opt_2026-04-27_233731.json  ecs_core_cpu_post_opt_2026-04-27_233819.json  ecs_core_cpu_post_opt_2026-04-27_234446.json  ecs_core_cpu_post_opt_2026-04-27_234711.json  ecs_core_cpu_post_opt_2026-04-27_234932.json  ecs_core_cpu_post_opt_2026-04-27_234932_snapshot.md  ecs_core_cpu_post_opt_2026-04-28_001208.json  ecs_core_cpu_post_opt_2026-04-28_001208_snapshot.md  ecs_core_cpu_post_opt_2026-04-28_002235.json  ecs_core_cpu_post_opt_2026-04-28_002343.json  ecs_core_cpu_post_opt_2026-04-28_002405.json  ecs_core_cpu_post_opt_2026-04-28_002405_snapshot.md  ecs_font_quality_2026-04-26_after_round2.json  ecs_font_quality_2026-04-26_baseline.json  ecs_font_quality_2026-04-26_snapshot.md  ecs_font_quality_2026-04-27_133153_pre_opt.json  ecs_font_quality_2026-04-27_133153_pre_opt_snapshot.md  ecs_geometry_runtime_2026-04-27_1505_post_fix.json  ecs_geometry_runtime_2026-04-27_1510_stable.json  ecs_geometry_runtime_2026-04-27_1535_step1_incremental_transform.json  ecs_geometry_runtime_2026-04-27_174214_phaseA.json  ecs_geometry_runtime_2026-04-27_174214_phaseA_fixed512.json  ecs_geometry_runtime_2026-04-27_174214_phaseA_vs_step1.json  ecs_geometry_runtime_2026-04-27_continue.json  ecs_geometry_runtime_gold.json  ecs_geometry_runtime_phase2_baseline_2026-04-28_140156.json  ecs_geometry_runtime_phase2_post_2026-04-28_140903.json  (+31 more)
bench/cases/: ecs_appearance_runtime_system_bench.cpp  ecs_bounds_system_bench.cpp  ecs_culling_system_bench.cpp  ecs_geometry_runtime_system_bench.cpp  ecs_particle_runtime_system_bench.cpp  ecs_surface_runtime_system_bench.cpp  ecs_surface_upload_plan_system_bench.cpp  ecs_text_component_bench.cpp  ecs_text_runtime_system_bench.cpp  frame_retire_host_bench.cpp  frame_sync_bench.cpp  freetype_host_bench.cpp  glyph_atlas_host_bench.cpp  render_light_shadow_link_coordinator_bench.cpp  render_shadow_atlas_binding_coordinator_bench.cpp  runtime_diagnostics_bench.cpp  runtime_steady_state_allocation_bench.cpp  runtime_text_renderer_bench.cpp  scene_background_runtime_bench.cpp  vulkan_types_bench.cpp
bench/support/: bench_crash_tracer.cpp  bench_crash_tracer.hpp  bench_framework.cpp  bench_framework.hpp
docs/: appearance_renderer_group_optimization_plan_2026-04-28.md  architecture_manual.md  deep-research-report (16).md  ecs_surface_design.md  ecs_surface_renderer_integration_2026-04-27.md  ecs_surface_runtime_upload_integration.md  ecs_surface_upload_optimization_2026-04-27.md  ecs_surface_upload_pipeline.md  file_index.md  fix_plan_code_review_report_2026-05-05_followup.md  module_conversion_report.md  render_runtime_contract_v0_1.md  render_target_v1_constraints.md  rendergraph_final_development_plan.md  runtime_hardening_todo.md  runtime_productization_progress_2026-04-29.md  shader_development_plan_2026-04-29.md  testing_framework_architecture.md
examples/: init_demo.cpp  sdl_backend_demo.cpp  sdl_geometry_unified_demo.cpp  sdl_offscreen_postprocess_demo.cpp  sdl_particle_2d_demo.cpp  sdl_particle_3d_demo.cpp  sdl_pbr_material_grid_demo.cpp  sdl_render_loop_demo.cpp  sdl_runtime_demo.cpp  sdl_scene_3d_unified_demo.cpp  sdl_surface_light_shadow_2d_demo.cpp  sdl_surface_unified_demo.cpp  sdl_text_3d_demo.cpp  sdl_text_demo.cpp
shaders/: background_2d.frag  geometry_2d.frag  geometry_2d.vert  skybox.frag  (+37 more)
tests/: CMakeLists.txt  README.md  test_main.cpp
tests/cases/: animation_host_tests.cpp  animation_skeletal_morph_host_tests.cpp  animation_vertex_frame_host_tests.cpp  background_2d_graph_tests.cpp  bindless_resource_integration_tests.cpp  bindless_shader_contract_tests.cpp  ecs_animation_deformation_evaluation_system_tests.cpp  ecs_animation_evaluation_system_tests.cpp  ecs_animation_system_tests.cpp  ecs_animation_vertex_frame_evaluation_system_tests.cpp  ecs_appearance_component_tests.cpp  ecs_appearance_link_system_tests.cpp  ecs_appearance_runtime_system_tests.cpp  ecs_appearance_system_tests.cpp  ecs_bounds_system_tests.cpp  ecs_culling_system_tests.cpp  ecs_geometry_batch_system_tests.cpp  ecs_geometry_component_tests.cpp  ecs_geometry_runtime_system_tests.cpp  ecs_light_component_tests.cpp  ecs_light_culling_system_tests.cpp  ecs_light_runtime_system_tests.cpp  ecs_particle_component_tests.cpp  ecs_particle_runtime_system_tests.cpp  ecs_shadow_caster_system_tests.cpp  ecs_shadow_component_tests.cpp  ecs_shadow_runtime_system_tests.cpp  ecs_surface_batch_runtime_system_tests.cpp  ecs_surface_component_tests.cpp  ecs_surface_upload_plan_system_tests.cpp  ecs_text_component_tests.cpp  ecs_text_render_3d_system_tests.cpp  ecs_text_runtime_system_tests.cpp  ecs_transform_camera_system_tests.cpp  frame_composer_graph_only_contract_tests.cpp  frame_retire_host_tests.cpp  freetype_host_tests.cpp  geometry_tangent_space_tests.cpp  glyph_atlas_host_tests.cpp  particle_simulation_host_tests.cpp  (+50 more)
tests/goldens/render_graph_observability/: compiled_topology_aliasing.json  queue_timeline_transfer_compute.json
tests/support/: render_graph_test_utils.hpp  test_framework.cpp  test_framework.hpp
(+393 files in other folders)
